# math-ml-research-copilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/backend/: main.py
app/core/: config.py
app/frontend/: streamlit_app.py
app/models/: schemas.py
app/services/: chunking.py  comparison.py  indexing.py  ingestion.py  pdf_ingestion.py  providers.py  qa.py  repository.py  retrieval.py  vector_store.py
docs/: architecture.md
evals/: answer_eval.py  retrieval_eval.py
evals/dataset/: sample_eval.json
tests/: test_chunking.py  test_ingestion.py  test_retrieval.py
